@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.13559 2014/08/14 16:31:06 imil Exp $
+$NetBSD: TODO,v 1.13560 2014/08/14 19:36:04 shattered Exp $
 
 Suggested new packages
 ======================
@@ -921,7 +921,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o projclock-0.9
 	o psmisc-22.20
 	o pspp-0.8.3
-	o pstoedit-3.61
 	o pv-1.2.0
 	o pvs-5.0
 	o pwlib-1.11.1
